New admin tools and categories management pages

--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,7 @@
         "lint": "eslint src/**/*.ts",
         "migrate": "prisma migrate dev",
         "seed": "ts-node-dev prisma/seed.ts",
+        "seed:awesome": "ts-node-dev scripts/seed_awesome_ai.ts",
         "test": "jest"
     },
     "dependencies": {
