--- a/backend/package.json
+++ b/backend/package.json
@@ -21,8 +21,10 @@
         "@fastify/rate-limit": "^10.3.0",
         "@prisma/client": "^5.9.1",
         "@types/bcrypt": "^6.0.0",
+        "@types/cheerio": "^0.22.35",
         "bcrypt": "^6.0.0",
         "bcryptjs": "^3.0.3",
+        "cheerio": "^1.1.2",
         "cors": "^2.8.5",
         "cross-fetch": "^4.1.0",
         "dotenv": "^16.4.1",
