--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,7 @@
         "dev": "vite",
         "build": "tsc && vite build",
         "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-        "preview": "vite preview",
+        "preview": "vite preview --host--port 8080",
         "test:e2e": "cypress run",
         "test:e2e:headed": "cypress open",
         "type-check": "tsc --noEmit"
