--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,8 +15,11 @@
     "dependencies": {
         "@headlessui/react": "^2.2.9",
         "@heroicons/react": "^2.2.0",
+        "axios": "^1.13.2",
+        "chart.js": "^4.5.1",
         "clsx": "^2.1.1",
         "react": "^18.2.0",
+        "react-chartjs-2": "^5.3.1",
         "react-dom": "^18.2.0",
         "react-helmet-async": "^2.0.5",
         "react-router-dom": "^7.9.6",
