--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
     ],
     "devDependencies": {
         "concurrently": "^8.2.2",
+        "dotenv-cli": "^11.0.0",
         "prettier": "^3.1.0"
     },
-    "engines": {
-        "node": ">=18.0.0",
-        "npm": ">=9.0.0"
+    "prisma": {
+        "schema": "backend/prisma/schema.prisma"
     }
 }
