--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,8 @@
         "@fastify/cors": "^10.0.0",
         "@fastify/jwt": "^10.0.0",
         "@fastify/rate-limit": "^10.3.0",
+        "@fastify/static": "^8.3.0",
+        "@google/generative-ai": "^0.24.1",
         "@prisma/client": "^5.9.1",
         "@types/bcrypt": "^6.0.0",
         "@types/cheerio": "^0.22.35",
@@ -29,7 +31,6 @@
         "cross-fetch": "^4.1.0",
         "dotenv": "^16.4.1",
         "fastify": "^5.0.0",
-        "@fastify/static": "^8.3.0",
         "fastify-type-provider-zod": "^6.1.0",
         "ioredis": "^5.8.2",
         "zod": "^4.1.12"
@@ -40,6 +41,8 @@
         "@types/jest": "^30.0.0",
         "@types/node": "^20.11.16",
         "@types/supertest": "^6.0.3",
+        "@typescript-eslint/eslint-plugin": "^8.48.1",
+        "@typescript-eslint/parser": "^8.48.1",
         "eslint": "^8.56.0",
         "jest": "^30.2.0",
         "jest-mock-extended": "^4.0.0",
