--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,9 +32,13 @@
         "@testing-library/user-event": "^14.6.1",
         "@types/react": "^18.2.55",
         "@types/react-dom": "^18.2.19",
+        "@typescript-eslint/eslint-plugin": "^8.48.1",
+        "@typescript-eslint/parser": "^8.48.1",
         "@vitejs/plugin-react": "^4.2.1",
         "autoprefixer": "^10.4.17",
         "cypress": "^15.7.0",
+        "eslint-plugin-react-hooks": "^7.0.1",
+        "eslint-plugin-react-refresh": "^0.4.24",
         "jsdom": "^27.2.0",
         "postcss": "^8.4.35",
         "tailwindcss": "^3.4.1",
