--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
         "frontend"
     ],
     "devDependencies": {
+        "@typescript-eslint/eslint-plugin": "^8.48.1",
+        "@typescript-eslint/parser": "^8.48.1",
         "concurrently": "^8.2.2",
         "dotenv-cli": "^11.0.0",
+        "eslint": "^8.57.1",
         "prettier": "^3.1.0"
     },
     "prisma": {
