--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
         "react-chartjs-2": "^5.3.1",
         "react-dom": "^18.2.0",
         "react-helmet-async": "^2.0.5",
+        "react-markdown": "^10.1.0",
         "react-router-dom": "^7.9.6",
         "tailwind-merge": "^3.4.0"
     },
