--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,13 @@
     "dependencies": {
         "@headlessui/react": "^2.2.9",
         "@heroicons/react": "^2.2.0",
+        "@tiptap/extension-code-block": "^3.13.0",
+        "@tiptap/extension-image": "^3.13.0",
+        "@tiptap/extension-link": "^3.13.0",
+        "@tiptap/extension-underline": "^3.13.0",
+        "@tiptap/pm": "^3.13.0",
+        "@tiptap/react": "^3.13.0",
+        "@tiptap/starter-kit": "^3.13.0",
         "axios": "^1.13.2",
         "chart.js": "^4.5.1",
         "clsx": "^2.1.1",
