feat: Add Google OAuth login and user favorites/bookmarks
Backend:
- Add Google OAuth endpoint (/api/auth/google)
- Create favorites API routes (CRUD for bookmarks)
- Update auth controller for OAuth users

Frontend:
- Create AuthContext for global auth state
- Add FavoriteButton component with heart icon
- Create Favorites page for saved tools
- Update AuthForms with Google Sign-In button
- Add Register page
- Update Header with My Favorites link
- Integrate favorites in ToolCard and ToolDetail

Config:
- Update render.yaml with VITE_GOOGLE_CLIENT_ID
- Update DEPLOYMENT.md with OAuth setup guide

--- a/render.yaml
+++ b/render.yaml
@@ -56,6 +56,8 @@ services:
     envVars:
       - key: VITE_API_URL
         value: https://findmyai-backend.onrender.com
+      - key: VITE_GOOGLE_CLIENT_ID
+        sync: false  # Set manually in Render dashboard
 
 databases:
   - name: findmyai-db
